--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8585
+server.servlet.context-path=/workintech
+
+spring.devtools.restart.enabled=true
+
+info.name=Developer App - Elif Cetin
+info.description=Spring Boot DI CRUD example
+info.version=1.0.0
 
