app properties update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8585
 server.servlet.context-path=/workintech
 
-spring.devtools.restart.enabled=true
+management.endpoints.web.exposure.include=info,health,mappings
+management.info.env.enabled=true
 
-info.name=Developer App - Elif Cetin
-info.description=Spring Boot DI CRUD example
-info.version=1.0.0
-
+info.app.name=s17d2
+info.app.description=elifcetin-springbootproject
+info.app.version=17.2
