--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.servlet.context-path=/workintech
 management.endpoints.web.exposure.include=info,health,mappings
 management.info.env.enabled=true
 
-info.app.name=sprint17-day2
-info.app.description=elifcetin-springboot-dependencyinj 
+info.app.name=S17D2 Project- elfctn
+info.app.description=Spring Boot REST API - CRUD System
 info.app.version=17.2
